# IntroVirt

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  README.md  demo.yml  gitversion.cmake
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gh-release.yml  iv.yml  pages.yml  release.yml
conf/: log4cxx.properties
deb/: conffiles  postinst
debian/: .gitignore  changelog  changelog.bionic  changelog.focal  changelog.jammy  changelog.noble  control  control.bionic  control.focal  control.jammy  control.noble  copyright  introvirt-tools.postinst  libintrovirt-dev.install  libintrovirt-doc.install  libintrovirt1.install  libintrovirt1.postinst  rules
doc/: Main.md  README-theme.md  doxygen-awesome-footer.html
examples/: CMakeLists.txt  README.md  callmon.py  filemon.py  list_domains.py  syscall_monitor.cc  syscallmon.py  vmcall_interface.cc  vmcall_interface.py
examples/guest/vmcall_interface/: build.ps1  hypercall.asm  main.c  vmcall.asm
include/introvirt/: VersionInfo.hh  fwd.hh  introvirt.hh
include/introvirt/core/: core.hh  fwd.hh
include/introvirt/util/: HexDump.hh  ProgressBar.hh  compiler.hh  introvirt_assert.hh  n2hexstr.hh  util.hh
include/introvirt/windows/: PdbStore.hh  WindowsGuest.hh  fwd.hh  pe.hh  windows.hh
pyintrovirt/: README.md  example.py  pyproject.toml
pyintrovirt/docs/: conf.py  index.rst
pyintrovirt/docs/api/: pyintrovirt.rst
pyintrovirt/pyintrovirt/: __init__.py  _cli.py  domain.py  errors.py  event.py  event_type.py  shell.py  vmi.py
pyintrovirt/tests/: conftest.py  test_bindings.py  test_pyintrovirt.py
pyintrovirt/tools/: ivfilemon.py  ivsyscallmon.py
scripts/: build_ci.sh  build_deps.sh  build_release.sh  deploy_ci.sh  deploy_release.sh  update_ci_repo.sh  update_release_repo.sh
src/: CMakeLists.txt  main.cc  version.cc
src/core/breakpoint/: BreakpointImpl.cc  BreakpointImpl.hh  BreakpointManager.cc  BreakpointManager.hh  SingleStepImpl.cc  SingleStepImpl.hh  SingleStepManager.cc  SingleStepManager.hh  WatchpointImpl.cc  WatchpointImpl.hh  WatchpointManager.cc  WatchpointManager.hh
src/core/domain/: DomainImpl.cc  DomainImpl.hh  GuestImpl.hh  Hypervisor.cc  VcpuImpl.cc  VcpuImpl.hh
src/core/event/: ControlRegisterEventImpl.hh  EventImpl.cc  EventImpl.hh  EventType.cc  ExceptionEventImpl.hh  HypervisorEvent.hh  MemAccessEventImpl.hh  NoOsEvent.hh  SystemCallEvent.cc  SystemCallEventImpl.hh  ThreadLocalEvent.cc
src/core/exception/: AllocationFailedException.cc  BadPhysicalAddressException.cc  BufferTooSmallException.cc  CommandFailedException.cc  DomainBusyException.cc  EventPollException.cc  GuestDetectionException.cc  InterruptedException.cc  InvalidMethodException.cc  InvalidVcpuException.cc  MemoryException.cc  NoSuchDomainException.cc  NotImplementedException.cc  NullAddressException.cc  SystemCallInjectionException.cc  TraceableException.cc  UnsupportedHypervisorException.cc  VirtualAddressNotPresentException.cc
src/core/filter/: TaskFilter.cc
src/core/function/: FunctionCall.cc
src/core/injection/: RegisterGuard.cc  RegisterGuard.hh
src/core/memory/: GuestAddress.cc  GuestMemoryMapping.cc  GuestPhysicalAddress.cc  GuestVirtualAddress.cc
src/core/syscall/: SystemCallFilter.cc  SystemCallImpl.hh
src/hypervisor/kvm/: KvmDomain.cc  KvmDomain.hh  KvmEvent.cc  KvmEvent.hh  KvmHypervisor.cc  KvmHypervisor.hh  KvmRegisters.cc  KvmRegisters.hh  KvmVcpu.cc  KvmVcpu.hh  kvm_introspection.hh
src/util/: HexDump.cc  ProgressBar.cc  jsoncpp.cc
src/windows/: .gitignore  PdbStore.cc  SystemCallConverter.cc  WindowsGuestImpl.cc  WindowsGuestImpl.hh
src/windows/common/: BufferReader.hh  REG_TYPE.cc  TypeContainer.cc  TypeContainer.hh  TypeOffsets.hh  Utf16String.cc  WStr.cc  WinError.cc
src/windows/event/: WindowsEventImpl.hh  WindowsEventTaskInformation.cc  WindowsSystemCallEventImpl.hh
src/windows/exception/: IdleThreadException.cc  IncorrectTypeException.cc  InvalidIrpException.cc  InvalidStructureException.cc  InvalidSystemCallConfiguration.cc  StringConversionException.cc  SymbolNotFoundException.cc  TypeInformationException.cc
src/windows/injection/: function.cc  function.hh  page_fault.hh  syscall.cc  syscall.hh
src/windows/kernel/: .gitignore  ServiceDescriptorTableImpl.cc  ServiceDescriptorTableImpl.hh  ServiceTableImpl.cc  ServiceTableImpl.hh  SystemCallCreator.hh  SystemCallIndex.cc  WindowsSystemCallImpl.hh
src/windows/libraries/: .gitignore  WindowsFunctionCall.cc  helpers.hh
swig/: breakpoints.i  core.i  exceptions.i  generate_introvirt_pyi.py  guest_memory.i  ignores_core.i  introvirt.i  introvirt.pyi  pdb_helpers.i  pdb_helpers_impl.h  pe.i  typemaps.i  windows.i
swig/core/: core.i  guest_memory.i
swig/windows/: pdb_helpers.i  pdb_helpers_impl.h  pe.i  windows.i
tests/: CMakeLists.txt  gdt.cc  idt.cc  readmem.cc  readvcpu.cc
tools/: CMakeLists.txt  ivcallmon.cc  ivcr3mon.cc  ivexec.cc  ivfilemon.cc  ivguestinfo.cc  ivmemwatch.cc  ivprocinfo.cc  ivprocmemdump.cc  ivreadfile.cc  ivservicetable.cc  ivsessions.cc  ivsyscallmon.cc  ivversion.cc  ivwritefile.cc
tools/shared/: SystemCallMonitor.hh
win_func_call_generator/: generate.py  typemap.json
win_func_call_generator/templates/: function.cc.tpl  function.hh.tpl  fwd.hh.tpl  includes.hh.tpl
win_syscall_generator/: .pylintrc  generate.py  ntdll.json  requirements-dev.txt  requirements.txt  setup.cfg  typemap.json  user32.json
win_syscall_generator/templates/: NtSystemCall.hh.tpl  NtSystemCallImpl.hh.tpl  SystemCallCreator.cc.tpl  fwd.hh.tpl  supported_syscalls.cc.tpl  syscall.hh.tpl  syscall_impl.hh.tpl  windows_syscalls_swig.i.tpl
(+1034 files in other folders)
